--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <!-- 基础颜色 -->
+    <color name="gray_cccc">#cccccc</color>
+    <color name="white_fff">#ffffff</color>
+    <color name="gray_333">#333333</color>
+    <color name="gray_666">#666666</color>
+    <color name="red_4d52">#f04d52</color>
 </resources>
