--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
 
     <!-- 基础颜色 -->
+    <color name="transparent">#00000000</color>
+    <color name="transparent2">#80000000</color>
     <color name="gray_cccc">#cccccc</color>
     <color name="white_fff">#ffffff</color>
     <color name="gray_333">#333333</color>
