--- a/app/src/main/res/layout/activity_music_scan.xml
+++ b/app/src/main/res/layout/activity_music_scan.xml
@@ -26,7 +26,7 @@
             android:id="@+id/rlMusicScanStart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/tvMusicScanStartScan"
@@ -48,7 +48,7 @@
             android:id="@+id/rlMusicScanResult"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvMusciScan"
@@ -66,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
