--- a/app/src/main/res/values/strings_activity.xml
+++ b/app/src/main/res/values/strings_activity.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- 闪屏页面 FirstActivity -->
+    <string name="FirstActivity_count">&#160;点击跳过</string>
+
+    <!-- 首页 MainActivity -->
+    <string name="MainActivity_title">爱英音乐</string>
+    <string name="MainActivity_exit_error">退出有问题...</string>
+    <string name="MainActivity_exit_onemore">一二三四，再来一次</string>
+    <string name="MainActivity_slide_music_scan">扫描歌曲</string>
+    <string name="MainActivity_slide_setting">设置</string>
+    <string name="MainActivity_slide_exit">退出</string>
+
     <!-- 扫描本地歌曲   -->
     <string name="MusicScanActivity_title">扫描歌曲</string>
     <string name="MusicScanActivity_start_scan">开始扫描</string>
