--- a/app/src/main/res/layout/item_music_scan.xml
+++ b/app/src/main/res/layout/item_music_scan.xml
@@ -21,7 +21,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="center_vertical"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:id="@+id/llMusicScanItemContainer"
