调整：文件夹音乐列表页面

--- a/app/src/main/res/layout/item_folder_music.xml
+++ b/app/src/main/res/layout/item_folder_music.xml
@@ -17,6 +17,7 @@
 
         <CheckBox
             android:id="@+id/cbFolderMusicItemFavorite"
+            style="@style/style_music_item_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
