--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="gray_666">#666666</color>
     <color name="gray_999">#999999</color>
     <color name="gray_ebeb">#ebebeb</color>
+    <color name="gray_ebef">#ebeff2</color>
+    <color name="gray_e3e3">#e3e3e3</color>
     <color name="red_4d52">#f04d52</color>
 </resources>
