--- a/app/src/main/res/layout/activity_folder_with_music.xml
+++ b/app/src/main/res/layout/activity_folder_with_music.xml
@@ -15,12 +15,13 @@
         android:id="@+id/llFolderWithMusicListContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvFolderWithMusicList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_folder_music" />
 
