--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,12 @@
         <item name="android:windowExitAnimation">@anim/anim_pop_alpha</item>
     </style>
 
+    <!-- 下进上出动画 -->
+    <style name="DownAndUpAnimation" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/view_enter</item>
+        <item name="android:windowExitAnimation">@anim/view_exit</item>
+    </style>
+
     <!-- 音乐加入我的喜欢 -->
     <style name="style_music_item_favorite" parent="@android:style/Widget.CompoundButton.CheckBox">
         <item name="android:button">@drawable/music_item_favorite_style</item>
